pysrc/results/batch_full_manywalker.err
  File "loglike_variance.py", line 16
    for N_scale in [128, 256, 512], 1024, 2048]:
                                              ^
SyntaxError: invalid syntax
